[gd_scene load_steps=6 format=3 uid="uid://cvumy8oxxhyeu"]

[ext_resource type="Script" path="res://source/editor/editor.gd" id="1_xl6wk"]
[ext_resource type="PackedScene" uid="uid://qderush58gmd" path="res://source/board_manager/board_manager.tscn" id="2_yn71k"]
[ext_resource type="PackedScene" uid="uid://civnu80bpedr0" path="res://source/edit_panel/edit_panel.tscn" id="4_b7new"]
[ext_resource type="PackedScene" uid="uid://crfedg2jxu4tl" path="res://source/game_board/game_board.tscn" id="8_h4ux7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuf2m"]
bg_color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="Editor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xuf2m")
script = ExtResource("1_xl6wk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BoardManager" parent="HBoxContainer" instance=ExtResource("2_yn71k")]
layout_mode = 2

[node name="SideMargin" type="Control" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.26

[node name="BoardContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="GameBoard" parent="HBoxContainer/BoardContainer" instance=ExtResource("8_h4ux7")]
layout_mode = 2

[node name="EditPanel" parent="HBoxContainer" instance=ExtResource("4_b7new")]
layout_mode = 2
